[gd_scene load_steps=18 format=3 uid="uid://bkkw8idpqh735"]

[ext_resource type="Script" uid="uid://w4a4hxau68b1" path="res://src/scripts/Palabras.gd" id="1_c1u67"]
[ext_resource type="Texture2D" uid="uid://b7pavle8brn4r" path="res://src/resources/Atlas/Titulo.tres" id="1_nlgqx"]
[ext_resource type="FontFile" uid="uid://deh26sxetdow1" path="res://src/assets/fonts/MotionControl-Title.otf" id="2_c1u67"]
[ext_resource type="Texture2D" uid="uid://blt54qryonjkw" path="res://src/resources/Atlas/Menu.tres" id="3_0ssxi"]
[ext_resource type="FontFile" uid="uid://do7o2q1y3iu7r" path="res://src/assets/fonts/RimouskiSB-Text.otf" id="4_swsyq"]
[ext_resource type="Texture2D" uid="uid://ck0c0mq7abnvi" path="res://icon.svg" id="5_ym3nd"]
[ext_resource type="Texture2D" uid="uid://cnyqx8kkiq3tj" path="res://src/assets/ui/BotonNormal.png" id="7_54f0t"]
[ext_resource type="Texture2D" uid="uid://cleqi5c2xdlo2" path="res://src/assets/ui/BotonPressed.png" id="8_f40s8"]
[ext_resource type="Texture2D" uid="uid://b0bhshgitawwe" path="res://src/assets/ui/BotonHover.png" id="9_mi6n1"]
[ext_resource type="Texture2D" uid="uid://mbexp1exudu6" path="res://src/assets/ui/BotonHoverPressed.png" id="10_nmflb"]
[ext_resource type="Texture2D" uid="uid://dyp6he657lj1b" path="res://src/assets/ui/BotonFocus.png" id="11_45dnk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nlgqx"]
bg_color = Color(0.6627451, 0.4862745, 0.4862745, 0.87058824)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4nqo0"]
content_margin_bottom = 32.0
texture = ExtResource("7_54f0t")
region_rect = Rect2(0, 0, 56, 17)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ijqjh"]
content_margin_top = 28.0
texture = ExtResource("8_f40s8")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x17ry"]
content_margin_bottom = 32.0
texture = ExtResource("9_mi6n1")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ijy02"]
content_margin_top = 28.0
texture = ExtResource("10_nmflb")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4dx4i"]
texture = ExtResource("11_45dnk")

[node name="Palabras" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c1u67")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.96862745, 0.6156863, 0.39607844, 1)

[node name="MenuVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -460.0
offset_top = -758.0
offset_right = 460.0
offset_bottom = 758.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Titulo" type="NinePatchRect" parent="MenuVBox"]
custom_minimum_size = Vector2(140, 220)
layout_mode = 2
texture = ExtResource("1_nlgqx")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="Label" type="Label" parent="MenuVBox/Titulo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.6627451, 0.4862745, 0.4862745, 1)
theme_override_constants/outline_size = 14
theme_override_fonts/font = ExtResource("2_c1u67")
theme_override_font_sizes/font_size = 96
text = "La Palabra es : .... !"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Menu" type="NinePatchRect" parent="MenuVBox"]
custom_minimum_size = Vector2(0, 1280)
layout_mode = 2
texture = ExtResource("3_0ssxi")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="ContenedorVBox" type="VBoxContainer" parent="MenuVBox/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Nombre" type="Label" parent="MenuVBox/Menu/ContenedorVBox"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4_swsyq")
theme_override_font_sizes/font_size = 96
text = "JUGADOR : Jugador1"
horizontal_alignment = 1

[node name="Margen" type="MarginContainer" parent="MenuVBox/Menu/ContenedorVBox"]
custom_minimum_size = Vector2(650, 650)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PerfilPic" type="TextureRect" parent="MenuVBox/Menu/ContenedorVBox/Margen"]
visible = false
custom_minimum_size = Vector2(600, 600)
layout_mode = 2
texture = ExtResource("5_ym3nd")
stretch_mode = 5

[node name="Palabra" type="Panel" parent="MenuVBox/Menu/ContenedorVBox/Margen"]
custom_minimum_size = Vector2(600, 600)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_nlgqx")

[node name="PalVBox" type="VBoxContainer" parent="MenuVBox/Menu/ContenedorVBox/Margen/Palabra"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.5
offset_top = -20.0
offset_right = 61.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="Impostor" type="Label" parent="MenuVBox/Menu/ContenedorVBox/Margen/Palabra/PalVBox"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.9952881, 0.5909367, 0.5102917, 1)
theme_override_fonts/font = ExtResource("4_swsyq")
theme_override_font_sizes/font_size = 48
text = "¡ EL IMPOSTOR ERES TÚ !"
horizontal_alignment = 1

[node name="Label1" type="Label" parent="MenuVBox/Menu/ContenedorVBox/Margen/Palabra/PalVBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_swsyq")
theme_override_font_sizes/font_size = 32
text = "La categoria es: "
horizontal_alignment = 1

[node name="Categoria" type="Label" parent="MenuVBox/Menu/ContenedorVBox/Margen/Palabra/PalVBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_swsyq")
theme_override_font_sizes/font_size = 32
text = "Wea"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="MenuVBox/Menu/ContenedorVBox/Margen/Palabra/PalVBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_swsyq")
theme_override_font_sizes/font_size = 48
text = "Y La PALABRA es: "
horizontal_alignment = 1

[node name="LaPalabra" type="Label" parent="MenuVBox/Menu/ContenedorVBox/Margen/Palabra/PalVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.4117647)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("4_swsyq")
theme_override_font_sizes/font_size = 64
text = "WEADA"
horizontal_alignment = 1

[node name="Revelar" type="Button" parent="MenuVBox/Menu/ContenedorVBox"]
custom_minimum_size = Vector2(560, 170)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_colors/font_color = Color(0.6627451, 0.4862745, 0.4862745, 1)
theme_override_colors/font_focus_color = Color(0.6627451, 0.4862745, 0.4862745, 1)
theme_override_colors/font_pressed_color = Color(0.6627451, 0.4862745, 0.4862745, 1)
theme_override_colors/font_hover_color = Color(0.73333335, 0.5686275, 0.5686275, 1)
theme_override_colors/font_hover_pressed_color = Color(0.6627451, 0.4862745, 0.4862745, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 14
theme_override_fonts/font = ExtResource("4_swsyq")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxTexture_4nqo0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ijqjh")
theme_override_styles/hover = SubResource("StyleBoxTexture_x17ry")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_ijy02")
theme_override_styles/focus = SubResource("StyleBoxTexture_4dx4i")
text = "Revelar"

[node name="Siguiente" type="Button" parent="MenuVBox/Menu/ContenedorVBox"]
visible = false
custom_minimum_size = Vector2(560, 170)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_colors/font_color = Color(0.6627451, 0.4862745, 0.4862745, 1)
theme_override_colors/font_focus_color = Color(0.6627451, 0.4862745, 0.4862745, 1)
theme_override_colors/font_pressed_color = Color(0.6627451, 0.4862745, 0.4862745, 1)
theme_override_colors/font_hover_color = Color(0.73333335, 0.5686275, 0.5686275, 1)
theme_override_colors/font_hover_pressed_color = Color(0.6627451, 0.4862745, 0.4862745, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 14
theme_override_fonts/font = ExtResource("4_swsyq")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxTexture_4nqo0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ijqjh")
theme_override_styles/hover = SubResource("StyleBoxTexture_x17ry")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_ijy02")
theme_override_styles/focus = SubResource("StyleBoxTexture_4dx4i")
text = "SIGUIENTE"
